Update MSE function

--- a/ml_task_one.ipynb
+++ b/ml_task_one.ipynb
@@ -289,7 +289,7 @@
    "cell_type": "code",
    "source": [
     "def mean_squared_error(y_true, y_pred):\n",
-    "    return np.sum((y_true - y_pred) ** 2) / len(y_true)"
+    "    return np.mean((y_true - y_pred) ** 2)"
    ],
    "id": "ac56d7c0c8320f70",
    "outputs": [],
